scss/modules/_site-header.scss
// Site Header
//
// Styleguide modules.site-header

// Staging banner
.banner {
  display: none;
  background-color: $navy;
  color: $inverse;
  font-family: $sans-serif;
  padding: u(1rem 0);
  width: 100%;

  a {
    border-bottom-color: $inverse;
    color: $inverse;
  }
}

// Skip nav
.skip-nav {
  @include transition(top, .2s);
  background-color: $primary;
  border: 2px solid $primary-contrast;
  color: $inverse;
  font-family: $sans-serif;
  left: u(2rem);
  padding: u(1rem 2rem);
  position: absolute;
  top: u(-10rem);
  z-index: $z4;

  &:focus {
    border-bottom-color: $primary-contrast;
    top: 0;
  }
}

// US Bar
//
// Markup:
// <div class="disclaimer">
//   <span class="disclaimer__left">This site is in beta, visit <a href="http://www.fec.gov">FEC.gov</a></span>
//   <span class="disclaimer__right">
//     An official website of the United States Government.
//     <img alt="US flag signifying that this is a United States Federal Government website" src="img/us_flag_small.png">
//   </span>
// </div>
//
// Styleguide modules.site-header.disclaimer

.disclaimer {
  @include clearfix();
  border-bottom: 1px solid $neutral;
  color: $gray-dark;
  font-family: $sans-serif;
  font-size: u(1.2rem);
  line-height: 1;
  padding: u(5px 2rem);
  text-align: center;
}

.disclaimer__left {
  display: none;
  float: left;
}

.disclaimer__right {
  text-align: center;

  img {
    vertical-align: bottom;
  }
}

@include media($med) {
  .disclaimer {
    float: right;
    width: calc(100% - 9rem);
  }

  .disclaimer__left {
    display: block;
    padding-left: u(1rem);
  }

  .disclaimer__right {
    float: right;
  }
}

// Masthead
//
// The combination of the logo, site title and utility nav
//
// Markup:
// <div class="masthead">
//   <a href="/" title="Home" class="site-title"><span class="u-visually-hidden">Federal Election Commission | United States of America</span></a>
//   <ul class="utility-nav list--flat">
//     <li class="utility-nav__item">About</li>
//     <li class="utility-nav__item">Contact</li>
//     <li class="utility-nav__item">Contact</li>
//     <li class="utility-nav__item">Glossary</li>
//   </ul>
// </div>
//
// Styleguide modules.site-header.masthead

.masthead {
  @include clearfix();

  @include media($med) {
    @include u-background-image('seal--cropped', 0% 100%);
    border-bottom: 2px solid $neutral;
    display: block;
    background-size: u(11rem);
  }
}

.site-header {
  position: relative;

  @include media($lg) {
    position: relative;
    z-index: $z-header;
  }
}

.site-title {
  margin-bottom: 0;
  border-bottom: 0;
  display: none;
  float: left;
  width: 100%;

  @include media($med) {
    @include u-background-image('wordmark', u(12rem) 50%);
    background-size: contain;
    display: block;
    margin: u(1rem 0 .7rem 0);
    padding-left: u(12rem);
    height: u(3.4rem);
    width: 100%;
  }

  @include media($lg) {
    width: 32%;
  }
}

.utility-nav {
  font-family: $sans-serif;
  display: none;
  float: right;
  padding: u(1.6rem 0);

  @include media($lg) {
    display: block;
  }
}

li.utility-nav__item {
  @include media($lg) {
    border-left: 1px solid $gray;
    margin-right: 0;
    padding: u(0 1.5rem);
    line-height: u(1.6rem);
    font-size: u(1.4rem);

    &:first-child {
      border-left: none;
    }

    button {
      color: inherit;
      font-size: inherit;
    }

    a {
      border: none;

      &:hover {
        border-bottom: 1px dotted $base;
      }
    }
  }
}


// Mobile site title is included in the .site-nav nav element
.site-nav {
  .site-title {
    @include u-background-image('wordmark', 0% 50%);
    background-size: contain;
    display: block;
    height: u(3rem);
    margin: u(.5rem 1rem);
    width: calc(100% - 15rem);
    max-width: u(40rem);

    @include media($med) {
      display: none;
    }
  }
}

